cabal-version:       >=1.10

name:                pandoc-section-links
version:             0.1.0
synopsis:            A pandoc filter to add relative links to section headers
homepage:            https://github.com/LudvigHz/pandoc-section-links
license-file:        LICENSE
author:              Ludvig Hozman
maintainer:          ludvig123@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

source-repository head
  type: git
  location: git://github.com/LudvigHz/pandoc-section-links.git

executable pandoc-section-links
  main-is:             Main.hs
  build-depends:       base                 >= 4.13     && <4.14
                     , pandoc-types         >= 1.20     && < 1.21
                     , text
                     , unordered-containers >= 0.2      && < 0.3
  default-language:    Haskell2010
